# scanners

./: .gitignore  README.md  paper.scanners.yaml  plan.md  pyproject.toml  scanners.example.yaml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  types.ts
client/src/components/: ConfigEditor.tsx  ScannerPane.tsx
client/src/hooks/: useAuthStatus.ts  useScanner.ts
client/src/lib/: config.ts  defaultConfig.ts  ibkr.ts  indicators.ts  scanner.ts  types.ts
ibPortal/root/: conf.yaml
scripts/: explore_scanner_params.py  probe_fundamentals.py  start.sh  stop.sh
server/: package.json  scanners.example.yaml
server/src/: config.ts  ibkr.ts  index.ts  scanner.ts  types.ts
src/ibscanner/: __init__.py  __main__.py  config.py  engine.py  ib_client.py  indicators.py  tui.py  web.py
src/ibscanner/static/: index.html
